Update fix checkstyle